k8s/03-gogs-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
    service: gogs
  annotations:
    'prometheus.io/scrape': 'true'
spec:
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 22
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: gogs
    service: gogs
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
    service: gogs
spec:
  serviceName: gogs
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs
        service: gogs
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: gogs
        image: gogs/gogs
        command:
        - sh
        - -c
        - '/app/gogs/docker/start.sh cp -f /gogs-config/app.ini /data/gogs/conf/app.ini && chown -R git:git /data/gogs/conf && /bin/s6-svscan /app/gogs/docker/s6/'
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 3000
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 1
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "0.5"
        volumeMounts:
        - name: gogs-data
          mountPath: /data
        - name: gogs-config-dir
          mountPath: /gogs-config
      restartPolicy: Always
      volumes:
      - name: gogs-ini-tmpl
        configMap:
          name: gogs-ini-tmpl
      - name: gogs-config-dir
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: gogs-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
