k8s/03-gogs-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
  annotations:
    'prometheus.io/scrape': 'true'
spec:
  ports:
  - name: ssh
    protocol: TCP
    port: 22
  - name: http
    protocol: TCP
    port: 3000
  selector:
    app: gogs
  type: ClusterIP

---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: gogs-cert
  namespace: gogs
spec:
  commonName: git.dave-vlab.corp
  secretName: gogs-cert
  dnsNames:
    - git.dave-vlab.corp
    - gogs.dave-vlab.corp
  issuerRef:
    name: intranet-cluster-issuer
    kind: ClusterIssuer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
  annotations:
    io.cilium/tcp-keep-alive-idle: "10"
    io.cilium/tcp-keep-alive-probe-interval: "5"
    io.cilium/tcp-keep-alive-probe-max-failures: "10"
    io.cilium/websocket: disabled
spec:
  ingressClassName: cilium
  rules:
    - host: git.dave-vlab.corp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gogs
                port:
                  number: 3000
    - host: gogs.dave-vlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gogs
                port:
                  number: 3000
  tls:
  - hosts:
    - git.dave-vlab.corp
    - gogs.dave-vlab.com
    secretName: gogs-cert

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: gogs
        image: gogs/gogs
        command:
        - sh
        - -c
        - '/app/gogs/docker/start.sh cp -f /gogs-config/app.tmpl.ini /data/gogs/conf/app.ini && chown -R git:git /data/gogs/conf && /bin/s6-svscan /app/gogs/docker/s6/'
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 3000
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 1
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "0.5"
        volumeMounts:
        - name: gogs-data
          mountPath: /data
        - name: gogs-config-dir
          mountPath: /gogs-config
      restartPolicy: Always
      volumes:
      - name: gogs-ini-tmpl
        configMap:
          name: gogs-ini-tmpl
      - name: gogs-config-dir
        emptyDir: {}
      - name: gogs-data
        persistentVolumeClaim:
          claimName: gogs-data-pvc
